--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.4.8",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.4",
@@ -38,6 +39,7 @@
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "formik": "^2.1.5",
+    "graphql": "^15.5.1",
     "history": "^5.0.0",
     "install": "^0.13.0",
     "lodash": "^4.17.19",
