--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@material-ui/core": "^5.0.0-beta.4",
     "@material-ui/icons": "^5.0.0-alpha.28",
     "@material-ui/styles": "^4.10.0",
+    "@mui/material": "^5.0.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.1",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "debounce": "^1.2.1",
     "formik": "^2.1.5",
+    "gatsby-plugin-material-ui": "^4.0.2",
     "graphql": "^15.5.1",
     "history": "^5.0.0",
     "install": "^0.13.0",
@@ -50,14 +53,17 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.2",
     "react-scripts": "^4.0.0",
+    "react-toastify": "^7.0.4",
     "typescript": "^4.3.5",
     "uuid": "^8.3.0",
+    "xlsx": "^0.17.1",
     "yup": "^0.29.3"
   },
   "devDependencies": {
